k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: software-dev-1-service
spec:
  type: ClusterIP
  selector:
    app: software-dev-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
